fix: 랜덤으로 챌린지 조회 테스트에서 이미지가 존재하는 경우 테스트 케이스 추가